conj.output
Terminals unused in grammar

    "=="


State 28 conflicts: 1 shift/reduce
State 77 conflicts: 4 reduce/reduce
State 84 conflicts: 1 shift/reduce


Grammar

    0 $accept: library END

    1 library: functions

    2 functions: functions IDENTIFIER paramdecls ':' stmt
    3          | ε

    4 paramdecls: paramdecl
    5           | ε

    6 paramdecl: paramdecl ',' IDENTIFIER
    7          | IDENTIFIER

    8 stmt: com_stmt '}'
    9     | "if" '(' exprs ')' stmt
   10     | "while" '(' exprs ')' stmt
   11     | "return" exprs ';'
   12     | var_defs ';'
   13     | exprs ';'
   14     | ';'

   15 com_stmt: '{'
   16         | com_stmt stmt

   17 var_defs: "var" var_def1
   18         | var_defs ',' var_def1

   19 var_def1: IDENTIFIER '=' expr
   20         | IDENTIFIER

   21 exprs: var_defs
   22      | expr
   23      | expr ',' c_expr1

   24 c_expr1: expr
   25        | c_expr1 ',' expr

   26 expr: NUMCONST
   27     | STRINGCONST
   28     | IDENTIFIER
   29     | '(' expr ')'
   30     | expr '(' ')'
   31     | expr '[' exprs ']'
   32     | expr '(' c_expr1 ')'
   33     | expr '=' expr
   34     | expr '+' expr
   35     | expr '-' expr
   36     | expr "+=" expr
   37     | expr "-=" expr
   38     | expr "!=" expr
   39     | expr "||" expr
   40     | expr "&&" expr
   41     | expr ',' expr
   42     | '&' expr
   43     | '*' expr
   44     | '-' expr
   45     | '!' expr
   46     | "++" expr
   47     | "--" expr
   48     | expr "++"
   49     | expr "--"
   50     | expr '?' expr ':' expr


Terminals, with rules where they appear

    END (0) 0
    '!' (33) 45
    '&' (38) 42
    '(' (40) 9 10 29 30 32
    ')' (41) 9 10 29 30 32
    '*' (42) 43
    '+' (43) 34
    ',' (44) 6 18 23 25 41
    '-' (45) 35 44
    ':' (58) 2 50
    ';' (59) 11 12 13 14
    '=' (61) 19 33
    '?' (63) 50
    '[' (91) 31
    ']' (93) 31
    '{' (123) 15
    '}' (125) 8
    error (256)
    "return" (258) 11
    "while" (259) 10
    "if" (260) 9
    "var" (261) 17
    IDENTIFIER (262) 2 6 7 19 20 28
    NUMCONST (263) 26
    STRINGCONST (264) 27
    "||" (265) 39
    "&&" (266) 40
    "==" (267)
    "!=" (268) 38
    "++" (269) 46 48
    "--" (270) 47 49
    "+=" (271) 36
    "-=" (272) 37


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    library (35)
        on left: 1
        on right: 0
    functions (36)
        on left: 2 3
        on right: 1 2
    paramdecls (37)
        on left: 4 5
        on right: 2
    paramdecl (38)
        on left: 6 7
        on right: 4 6
    stmt (39)
        on left: 8 9 10 11 12 13 14
        on right: 2 9 10 16
    com_stmt (40)
        on left: 15 16
        on right: 8 16
    var_defs (41)
        on left: 17 18
        on right: 12 18 21
    var_def1 (42)
        on left: 19 20
        on right: 17 18
    exprs (43)
        on left: 21 22 23
        on right: 9 10 11 13 31
    c_expr1 (44)
        on left: 24 25
        on right: 23 25 32
    expr (45)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 19 22 23 24 25 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50


State 0

    0 $accept: • library END
    1 library: • functions
    2 functions: • functions IDENTIFIER paramdecls ':' stmt
    3          | ε •

    $default  reduce using rule 3 (functions)

    library    go to state 1
    functions  go to state 2


State 1

    0 $accept: library • END

    END  shift, and go to state 3


State 2

    1 library: functions •  [END]
    2 functions: functions • IDENTIFIER paramdecls ':' stmt

    IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 1 (library)


State 3

    0 $accept: library END •

    $default  accept


State 4

    2 functions: functions IDENTIFIER • paramdecls ':' stmt
    4 paramdecls: • paramdecl
    5           | ε •  [':']
    6 paramdecl: • paramdecl ',' IDENTIFIER
    7          | • IDENTIFIER

    IDENTIFIER  shift, and go to state 5

    $default  reduce using rule 5 (paramdecls)

    paramdecls  go to state 6
    paramdecl   go to state 7


State 5

    7 paramdecl: IDENTIFIER •

    $default  reduce using rule 7 (paramdecl)


State 6

    2 functions: functions IDENTIFIER paramdecls • ':' stmt

    ':'  shift, and go to state 8


State 7

    4 paramdecls: paramdecl •  [':']
    6 paramdecl: paramdecl • ',' IDENTIFIER

    ','  shift, and go to state 9

    $default  reduce using rule 4 (paramdecls)


State 8

    2 functions: functions IDENTIFIER paramdecls ':' • stmt
    8 stmt: • com_stmt '}'
    9     | • "if" '(' exprs ')' stmt
   10     | • "while" '(' exprs ')' stmt
   11     | • "return" exprs ';'
   12     | • var_defs ';'
   13     | • exprs ';'
   14     | • ';'
   15 com_stmt: • '{'
   16         | • com_stmt stmt
   17 var_defs: • "var" var_def1
   18         | • var_defs ',' var_def1
   21 exprs: • var_defs
   22      | • expr
   23      | • expr ',' c_expr1
   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "if"         shift, and go to state 12
    "var"        shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24
    '!'          shift, and go to state 25

    stmt      go to state 26
    com_stmt  go to state 27
    var_defs  go to state 28
    exprs     go to state 29
    expr      go to state 30


State 9

    6 paramdecl: paramdecl ',' • IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 10

   11 stmt: "return" • exprs ';'
   17 var_defs: • "var" var_def1
   18         | • var_defs ',' var_def1
   21 exprs: • var_defs
   22      | • expr
   23      | • expr ',' c_expr1
   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    "var"        shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    var_defs  go to state 32
    exprs     go to state 33
    expr      go to state 30


State 11

   10 stmt: "while" • '(' exprs ')' stmt

    '('  shift, and go to state 34


State 12

    9 stmt: "if" • '(' exprs ')' stmt

    '('  shift, and go to state 35


State 13

   17 var_defs: "var" • var_def1
   19 var_def1: • IDENTIFIER '=' expr
   20         | • IDENTIFIER

    IDENTIFIER  shift, and go to state 36

    var_def1  go to state 37


State 14

   28 expr: IDENTIFIER •

    $default  reduce using rule 28 (expr)


State 15

   26 expr: NUMCONST •

    $default  reduce using rule 26 (expr)


State 16

   27 expr: STRINGCONST •

    $default  reduce using rule 27 (expr)


State 17

   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   46     | "++" • expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    expr  go to state 38


State 18

   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   47     | "--" • expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    expr  go to state 39


State 19

   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   44     | '-' • expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    expr  go to state 40


State 20

   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   43     | '*' • expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    expr  go to state 41


State 21

   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   42     | '&' • expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    expr  go to state 42


State 22

   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   29     | '(' • expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    expr  go to state 43


State 23

   14 stmt: ';' •

    $default  reduce using rule 14 (stmt)


State 24

   15 com_stmt: '{' •

    $default  reduce using rule 15 (com_stmt)


State 25

   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   45     | '!' • expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    expr  go to state 44


State 26

    2 functions: functions IDENTIFIER paramdecls ':' stmt •

    $default  reduce using rule 2 (functions)


State 27

    8 stmt: • com_stmt '}'
    8     | com_stmt • '}'
    9     | • "if" '(' exprs ')' stmt
   10     | • "while" '(' exprs ')' stmt
   11     | • "return" exprs ';'
   12     | • var_defs ';'
   13     | • exprs ';'
   14     | • ';'
   15 com_stmt: • '{'
   16         | • com_stmt stmt
   16         | com_stmt • stmt
   17 var_defs: • "var" var_def1
   18         | • var_defs ',' var_def1
   21 exprs: • var_defs
   22      | • expr
   23      | • expr ',' c_expr1
   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    "return"     shift, and go to state 10
    "while"      shift, and go to state 11
    "if"         shift, and go to state 12
    "var"        shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '}'          shift, and go to state 45
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24
    '!'          shift, and go to state 25

    stmt      go to state 46
    com_stmt  go to state 27
    var_defs  go to state 28
    exprs     go to state 29
    expr      go to state 30


State 28

   12 stmt: var_defs • ';'
   18 var_defs: var_defs • ',' var_def1
   21 exprs: var_defs •  [';']

    ','  shift, and go to state 47
    ';'  shift, and go to state 48

    ';'  [reduce using rule 21 (exprs)]

    shift/reduce conflict on token ';':
       21 exprs: var_defs •
       12 stmt: var_defs • ';'
      Example: var_defs • ';'
      Shift derivation
        stmt
        ↳ 12: var_defs • ';'
      Reduce derivation
        stmt
        ↳ 13: exprs            ';'
              ↳ 21: var_defs •



State 29

   13 stmt: exprs • ';'

    ';'  shift, and go to state 49


State 30

   22 exprs: expr •  [')', ';', ']']
   23      | expr • ',' c_expr1
   30 expr: expr • '(' ')'
   31     | expr • '[' exprs ']'
   32     | expr • '(' c_expr1 ')'
   33     | expr • '=' expr
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • "+=" expr
   37     | expr • "-=" expr
   38     | expr • "!=" expr
   39     | expr • "||" expr
   40     | expr • "&&" expr
   41     | expr • ',' expr
   48     | expr • "++"
   49     | expr • "--"
   50     | expr • '?' expr ':' expr

    "||"  shift, and go to state 50
    "&&"  shift, and go to state 51
    "!="  shift, and go to state 52
    "++"  shift, and go to state 53
    "--"  shift, and go to state 54
    "+="  shift, and go to state 55
    "-="  shift, and go to state 56
    ','   shift, and go to state 57
    '?'   shift, and go to state 58
    '='   shift, and go to state 59
    '+'   shift, and go to state 60
    '-'   shift, and go to state 61
    '('   shift, and go to state 62
    '['   shift, and go to state 63

    $default  reduce using rule 22 (exprs)


State 31

    6 paramdecl: paramdecl ',' IDENTIFIER •

    $default  reduce using rule 6 (paramdecl)


State 32

   18 var_defs: var_defs • ',' var_def1
   21 exprs: var_defs •  [')', ';', ']']

    ','  shift, and go to state 47

    $default  reduce using rule 21 (exprs)


State 33

   11 stmt: "return" exprs • ';'

    ';'  shift, and go to state 64


State 34

   10 stmt: "while" '(' • exprs ')' stmt
   17 var_defs: • "var" var_def1
   18         | • var_defs ',' var_def1
   21 exprs: • var_defs
   22      | • expr
   23      | • expr ',' c_expr1
   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    "var"        shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    var_defs  go to state 32
    exprs     go to state 65
    expr      go to state 30


State 35

    9 stmt: "if" '(' • exprs ')' stmt
   17 var_defs: • "var" var_def1
   18         | • var_defs ',' var_def1
   21 exprs: • var_defs
   22      | • expr
   23      | • expr ',' c_expr1
   26 expr: • NUMCONST
   27     | • STRINGCONST
   28     | • IDENTIFIER
   29     | • '(' expr ')'
   30     | • expr '(' ')'
   31     | • expr '[' exprs ']'
   32     | • expr '(' c_expr1 ')'
   33     | • expr '=' expr
   34     | • expr '+' expr
   35     | • expr '-' expr
   36     | • expr "+=" expr
   37     | • expr "-=" expr
   38     | • expr "!=" expr
   39     | • expr "||" expr
   40     | • expr "&&" expr
   41     | • expr ',' expr
   42     | • '&' expr
   43     | • '*' expr
   44     | • '-' expr
   45     | • '!' expr
   46     | • "++" expr
   47     | • "--" expr
   48     | • expr "++"
   49     | • expr "--"
   50     | • expr '?' expr ':' expr

    "var"        shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    NUMCONST     shift, and go to state 15
    STRINGCONST  shift, and go to state 16
    "++"         shift, and go to state 17
    "--"         shift, and go to state 18
    '-'          shift, and go to state 19
    '*'          shift, and go to state 20
    '&'          shift, and go to state 21
    '('          shift, and go to state 22
    '!'          shift, and go to state 25

    var_defs  go to state 32
    exprs     go to state 66
    expr      go to state 30


State 36

   19 var_def1: IDENTIFIER • '=' expr
   20         | IDENTIFIER •  [',', ')', ';', ']']

    '='  shift, and go to state 67

    $default  reduce using rule 20 (var_def1)


State 37

   17 var_defs: "var" var_def1 •

    $default  reduce using rule 17 (var_defs)


State 38

   30 expr: expr • '(' ')'
   31     | expr • '[' exprs ']'
   32     | expr • '(' c_expr1 ')'
   33     | expr • '=' expr
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • "+=" expr
   37     | expr • "-=" expr
   38     | expr • "!=" expr
   39     | expr • "||" expr
   40     | expr • "&&" expr
   41     | expr • ',' expr
   46     | "++" expr •  ["||", "&&", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', ')', ';', ']']
   48     | expr • "++"
   49     | expr • "--"
   50     | expr • '?' expr ':' expr

    "++"  shift, and go to state 53
    "--"  shift, and go to state 54
    '('   shift, and go to state 62
    '['   shift, and go to state 63

    $default  reduce using rule 46 (expr)

    Conflict between rule 46 and token "||" resolved as reduce ("||" < "++").
    Conflict between rule 46 and token "&&" resolved as reduce ("&&" < "++").
    Conflict between rule 46 and token "!=" resolved as reduce ("!=" < "++").
    Conflict between rule 46 and token "++" resolved as shift (%right "++").
    Conflict between rule 46 and token "--" resolved as shift (%right "--").
    Conflict between rule 46 and token "+=" resolved as reduce ("+=" < "++").
    Conflict between rule 46 and token "-=" resolved as reduce ("-=" < "++").
    Conflict between rule 46 and token ',' resolved as reduce (',' < "++").
    Conflict between rule 46 and token '?' resolved as reduce ('?' < "++").
    Conflict between rule 46 and token '=' resolved as reduce ('=' < "++").
    Conflict between rule 46 and token '+' resolved as reduce ('+' < "++").
    Conflict between rule 46 and token '-' resolved as reduce ('-' < "++").
    Conflict between rule 46 and token '(' resolved as shift ("++" < '(').
    Conflict between rule 46 and token '[' resolved as shift ("++" < '[').


State 39

   30 expr: expr • '(' ')'
   31     | expr • '[' exprs ']'
   32     | expr • '(' c_expr1 ')'
   33     | expr • '=' expr
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • "+=" expr
   37     | expr • "-=" expr
   38     | expr • "!=" expr
   39     | expr • "||" expr
   40     | expr • "&&" expr
   41     | expr • ',' expr
   47     | "--" expr •  ["||", "&&", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', ')', ';', ']']
   48     | expr • "++"
   49     | expr • "--"
   50     | expr • '?' expr ':' expr

    "++"  shift, and go to state 53
    "--"  shift, and go to state 54
    '('   shift, and go to state 62
    '['   shift, and go to state 63

    $default  reduce using rule 47 (expr)

    Conflict between rule 47 and token "||" resolved as reduce ("||" < "++").
    Conflict between rule 47 and token "&&" resolved as reduce ("&&" < "++").
    Conflict between rule 47 and token "!=" resolved as reduce ("!=" < "++").
    Conflict between rule 47 and token "++" resolved as shift (%right "++").
    Conflict between rule 47 and token "--" resolved as shift (%right "--").
    Conflict between rule 47 and token "+=" resolved as reduce ("+=" < "++").
    Conflict between rule 47 and token "-=" resolved as reduce ("-=" < "++").
    Conflict between rule 47 and token ',' resolved as reduce (',' < "++").
    Conflict between rule 47 and token '?' resolved as reduce ('?' < "++").
    Conflict between rule 47 and token '=' resolved as reduce ('=' < "++").
    Conflict between rule 47 and token '+' resolved as reduce ('+' < "++").
    Conflict between rule 47 and token '-' resolved as reduce ('-' < "++").
    Conflict between rule 47 and token '(' resolved as shift ("++" < '(').
    Conflict between rule 47 and token '[' resolved as shift ("++" < '[').


State 40

   30 expr: expr • '(' ')'
   31     | expr • '[' exprs ']'
   32     | expr • '(' c_expr1 ')'
   33     | expr • '=' expr
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • "+=" expr
   37     | expr • "-=" expr
   38     | expr • "!=" expr
   39     | expr • "||" expr
   40     | expr • "&&" expr
   41     | expr • ',' expr
   44     | '-' expr •  ["||", "&&", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', ')', ';', ']']
   48     | expr • "++"
   49     | expr • "--"
   50     | expr • '?' expr ':' expr

    "++"  shift, and go to state 53
    "--"  shift, and go to state 54
    '('   shift, and go to state 62
    '['   shift, and go to state 63

    $default  reduce using rule 44 (expr)

    Conflict between rule 44 and token "||" resolved as reduce ("||" < '&').
    Conflict between rule 44 and token "&&" resolved as reduce ("&&" < '&').
    Conflict between rule 44 and token "!=" resolved as reduce ("!=" < '&').
    Conflict between rule 44 and token "++" resolved as shift (%right "++").
    Conflict between rule 44 and token "--" resolved as shift (%right "--").
    Conflict between rule 44 and token "+=" resolved as reduce ("+=" < '&').
    Conflict between rule 44 and token "-=" resolved as reduce ("-=" < '&').
    Conflict between rule 44 and token ',' resolved as reduce (',' < '&').
    Conflict between rule 44 and token '?' resolved as reduce ('?' < '&').
    Conflict between rule 44 and token '=' resolved as reduce ('=' < '&').
    Conflict between rule 44 and token '+' resolved as reduce ('+' < '&').
    Conflict between rule 44 and token '-' resolved as reduce ('-' < '&').
    Conflict between rule 44 and token '(' resolved as shift ('&' < '(').
    Conflict between rule 44 and token '[' resolved as shift ('&' < '[').


State 41

   30 expr: expr • '(' ')'
   31     | expr • '[' exprs ']'
   32     | expr • '(' c_expr1 ')'
   33     | expr • '=' expr
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • "+=" expr
   37     | expr • "-=" expr
   38     | expr • "!=" expr
   39     | expr • "||" expr
   40     | expr • "&&" expr
   41     | expr • ',' expr
   43     | '*' expr •  ["||", "&&", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', ')', ';', ']']
   48     | expr • "++"
   49     | expr • "--"
   50     | expr • '?' expr ':' expr

    "++"  shift, and go to state 53
    "--"  shift, and go to state 54
    '('   shift, and go to state 62
    '['   shift, and go to state 63

    $default  reduce using rule 43 (expr)

    Conflict between rule 43 and token "||" resolved as reduce ("||" < '&').
    Conflict between rule 43 and token "&&" resolved as reduce ("&&" < '&').
    Conflict between rule 43 and token "!=" resolved as reduce ("!=" < '&').
    Conflict between rule 43 and token "++" resolved as shift (%right "++").
    Conflict between rule 43 and token "--" resolved as shift (%right "--").
    Conflict between rule 43 and token "+=" resolved as reduce ("+=" < '&').
    Conflict between rule 43 and token "-=" resolved as reduce ("-=" < '&').
    Conflict between rule 43 and token ',' resolved as reduce (',' < '&').
    Conflict between rule 43 and token '?' resolved as reduce ('?' < '&').
    Conflict between rule 43 and token '=' resolved as reduce ('=' < '&').
    Conflict between rule 43 and token '+' resolved as reduce ('+' < '&').
    Conflict between rule 43 and token '-' resolved as reduce ('-' < '&').
    Conflict between rule 43 and token '(' resolved as shift ('&' < '(').
    Conflict between rule 43 and token '[' resolved as shift ('&' < '[').


State 42

   30 expr: expr • '(' ')'
   31     | expr • '[' exprs ']'
   32     | expr • '(' c_expr1 ')'
   33     | expr • '=' expr
   34     | expr • '+' expr
   35     | expr • '-' expr
   36     | expr • "+=" expr
   37     | expr • "-=" expr
   38     | expr • "!=" expr
   39     | expr • "||" expr
   40     | expr • "&&" expr
   41     | expr • ',' expr
   42     | '&' expr •  ["||", "&&", "!=", "+=", "-=", ',', '?', ':', '=', '+', '-', ')', ';', ']']
   48     | expr • "++"
   49     | expr • "--"
   50     | expr • '?' expr ':' expr

    "++"  shift, and go to state 53
    "--"  shift, and go to state 54
    '('   shift, and go to state 62
    '['   shift, and go to state 63

    $default  reduce using rule 42 (expr)
